# k8sphp

./: README.md  mycluster.yaml  pyproject.toml
app/: Dockerfile  index.php
