[tool.poetry]
name = "kubernetes"
version = "0.1.0"
description = ""
authors = ["ilgizar <ilgizar@mircod.com>"]

[tool.poetry.dependencies]
python = "^3.9"
awscli = "^1.20.37"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
